--- a/Module 4/tien_thanh/tiem_cam_do_tien_thanh/src/main/webapp/views/Android_Phone/listAndroid_Phone.html
+++ b/Module 4/tien_thanh/tiem_cam_do_tien_thanh/src/main/webapp/views/Android_Phone/listAndroid_Phone.html
@@ -1,14 +1,5 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
-<%--
-  Created by IntelliJ IDEA.
-  User: ASUS
-  Date: 27-Mar-23
-  Time: 6:40 PM
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Tiệm cầm đồ Tiến Thanh</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +12,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<%--    đoạn link này để phân trang cho một trang wed--%>
+<!--    <%&#45;&#45;    đoạn link này để phân trang cho một trang wed&#45;&#45;%>-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
     <script src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap.min.js"></script>
@@ -65,10 +56,10 @@
 <center>
     <h1>Cầm đồ Tiến Thanh</h1>
 
-    <%--    <form method="post" action="/tienthanh">--%>
-    <%--        <input type="hidden" name="action" value="create">--%>
-    <%--        <button type="submit" class="btn btn-success">Thêm Điện thoại cầm</button>--%>
-    <%--    </form>--%>
+<!--    <%&#45;&#45;    <form method="post" action="/tienthanh">&#45;&#45;%>-->
+<!--    <%&#45;&#45;        <input type="hidden" name="action" value="create">&#45;&#45;%>-->
+<!--    <%&#45;&#45;        <button type="submit" class="btn btn-success">Thêm Điện thoại cầm</button>&#45;&#45;%>-->
+<!--    <%&#45;&#45;    </form>&#45;&#45;%>-->
 
     <form class="form-add">
         <button type="button" class="btn btn-success" data-bs-toggle="modal"
@@ -114,7 +105,7 @@
 <div align="center">
     <table id="myTable" class="table table-hover" STYLE="text-align: center">
         <h2>Danh sách điện thoại cầm</h2>
-<%--        <caption><h2>Danh sách điện thoại cầm</h2></caption>--%>
+        <%--        <caption><h2>Danh sách điện thoại cầm</h2></caption>--%>
         <thead>
         <tr>
             <th>STT</th>
@@ -132,61 +123,60 @@
         </tr>
         </thead>
         <tbody>
-        <c:set var="count" value="1"/>
-        <c:forEach items="${listAndroid_Phone}" var="android_phone">
-            <tr>
-                <td><c:out value="${count}"/></td>
-                <c:set var="count" value="${count + 1}"/>
-
-                <td><c:out value="${android_phone.id}"/></td>
-                <td><c:out value="${android_phone.name_owner}"/></td>
-                <td><c:out value="${android_phone.name_phone}"/></td>
-                <td><c:out value="${android_phone.id_of_phone}"/></td>
-                <td><fmt:formatNumber value="${android_phone.price}" pattern="###,###,###,###"/></td>
-                <td th:d><fmt:formatDate value="${android_phone.start_Date}" pattern="dd/mm/yyyy"/></td>
-                <td><c:out value="${android_phone.phone_number_owner}"/></td>
-                <td><c:out value="${android_phone.status}"/></td>
-                <td><c:out value="${android_phone.password}"/></td>
-                <td><c:out value="${android_phone.note}"/></td>
+            <tr th:each="android_phone,stt: ${listAndroid_Phone}">
+                <td th:text="${stt.count}"></td>
+                <td th:text="${android_phone.id}"></td>
+                <td th:text="${android_phone.name_owner}"></td>
+                <td th:text="${android_phone.name_phone}"></td>
+                <td th:text="${android_phone.id_of_phone}"></td>
+<!--                <td th:text="${android_phone.price}"></td>-->
                 <td>
-                        <%--thanh công cụ--%>
-                        <%--                    <form action="/tienthanh" method="post" class="form-edit">--%>
-                        <%--                        <input type="hidden" name="action" value="edit_Android_phone">--%>
-                        <%--                        <input type="hidden" name="id_need_to_edit" value="${android_phone.id}">--%>
-                        <%--                        <button type="submit" class="btn btn-success" >Chỉnh sửa</button>--%>
-                        <%--                    </form>--%>
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal" data-bs-whatever="@mdo"
-                            onclick="edit_form('${android_phone.id}','${android_phone.name_owner}','${android_phone.name_phone}','${android_phone.id_of_phone}','${android_phone.price}','${android_phone.start_Date}','${android_phone.phone_number_owner}','${android_phone.status}','${android_phone.password}','${android_phone.note}')">
-                        Chỉnh sửa
-                    </button>
+                    <span th:text="${#numbers.formatInteger(android_phone.price, '###,###,###')}"></span>
+                </td>
+<!--                                <td th:text="${android_phone.start_Date}"></td>-->
+                <td th:text="${#dates.format(android_phone.start_Date, 'dd/MM/yyyy')}"></td>
+                <td th:text="${android_phone.phone_number_owner}"></td>
+                <td th:text="${android_phone.status}"></td>
+                <td th:text="${android_phone.password}"></td>
+                <td th:text="${android_phone.note}"></td>
+                <td>
+<!--                    thanh công cụ-->
+<!--                    <form action="/tienthanh" method="post" class="form-edit">-->
+<!--                    <input type="hidden" name="action" value="edit_Android_phone">-->
+<!--                    <input type="hidden" name="id_need_to_edit" value="${android_phone.id}">-->
+<!--                    <button type="submit" class="btn btn-success" >Chỉnh sửa</button>-->
+<!--                    </form>-->
+<!--                    <button type="button" class="btn btn-success" data-bs-toggle="modal"-->
+<!--                            data-bs-target="#exampleModal" data-bs-whatever="@mdo"-->
+<!--                            onclick="edit_form('${android_phone.id}','${android_phone.name_owner}','${android_phone.name_phone}','${android_phone.id_of_phone}','${android_phone.price}','${android_phone.start_Date}','${android_phone.phone_number_owner}','${android_phone.status}','${android_phone.password}','${android_phone.note}')">-->
+<!--                        Chỉnh sửa-->
+<!--                    </button>-->
 
-                        <%--                    <form action="/tienthanh" method="post" class="form-delete">--%>
-                        <%--                        <input type="hidden" name="action2" value="delete_android_phone_by_id">--%>
-                        <%--                        <input type="hidden" name="id_need_to_delete" value="${android_phone.id}">--%>
-                    <button type="button" class="btn btn-danger"
-                            onclick="delete_the_product('${android_phone.id}', this)">Xoá
-                    </button>
-                        <%--                    </form>--%>
+<!--                    <%&#45;&#45;                    <form action="/tienthanh" method="post" class="form-delete">&#45;&#45;%>-->
+<!--                    <%&#45;&#45;                        <input type="hidden" name="action2" value="delete_android_phone_by_id">&#45;&#45;%>-->
+<!--                    <%&#45;&#45;                        <input type="hidden" name="id_need_to_delete" value="${android_phone.id}">&#45;&#45;%>-->
+<!--                    <button type="button" class="btn btn-danger"-->
+<!--                            onclick="delete_the_product('${android_phone.id}', this)">Xoá-->
+<!--                    </button>-->
+<!--                    <%&#45;&#45;                    </form>&#45;&#45;%>-->
 
-                    <button type="button" class="btn btn-warning"
-                            onclick="calculate('${android_phone.id}','${android_phone.start_Date}', '${android_phone.price}')">
-                        Gia hạn
-                    </button>
+<!--                    <button type="button" class="btn btn-warning"-->
+<!--                            onclick="calculate('${android_phone.id}','${android_phone.start_Date}', '${android_phone.price}')">-->
+<!--                        Gia hạn-->
+<!--                    </button>-->
 
-                    <button type="button" class="btn btn-info"
-                            onclick="take_the_product('${android_phone.id}','${android_phone.start_Date}', '${android_phone.price}',this)">
-                        lấy máy
-                    </button>
+<!--                    <button type="button" class="btn btn-info"-->
+<!--                            onclick="take_the_product('${android_phone.id}','${android_phone.start_Date}', '${android_phone.price}',this)">-->
+<!--                        lấy máy-->
+<!--                    </button>-->
                 </td>
             </tr>
-        </c:forEach>
         </tbody>
 
     </table>
 </div>
 
-<%--form để thêm mới điện thoại cầm--%>
+<!--<%&#45;&#45;form để thêm mới điện thoại cầm&#45;&#45;%>-->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -217,7 +207,7 @@
                             <optgroup label="Các hãng điện thoại">
                                 <option value="samsung">SAMSUNG</option>
                                 <option value="oppo">OPPO</option>
-<%--                                <option value="iphone">IPHONE</option>--%>
+                                <%--                                <option value="iphone">IPHONE</option>--%>
                                 <option value="realme">REALME</option>
                                 <option value="vivo">VIVO</option>
                                 <option value="xiaomi">XIAOMI</option>
@@ -250,13 +240,13 @@
                         <label for="start_date_android_phone" class="col-form-label">Ngày cầm:</label>
                         <input type="date" name="start_Date" class="form-control" id="start_date_android_phone"
                                onblur="startDateError()">
-                        <%--                        <fmt:formatDate value="${android_phone.start_Date}" pattern="dd/MM/yyyy"/>--%>
+<!--                        <%&#45;&#45;                        <fmt:formatDate value="${android_phone.start_Date}" pattern="dd/MM/yyyy"/>&#45;&#45;%>-->
                         <span class="input-error" id="check_if_start_date_null">Vui lòng nhập ngày cầm</span>
                     </div>
                     <div class="mb-3">
                         <label for="phone_number_owner" class="col-form-label">Số điện thoại của người cầm: </label>
                         <input type="number" name="phone_number_owner" class="form-control" id="phone_number_owner" placeholder="Không có">
-<%--                        <span class="input-error" id="check_phone_number_owner_null">Vui lòng số điện thoại.</span>--%>
+                        <%--                        <span class="input-error" id="check_phone_number_owner_null">Vui lòng số điện thoại.</span>--%>
                     </div>
                     <div class="mb-3">
                         <label for="status_android_phone" class="col-form-label">Tình trạng:</label>
@@ -827,4 +817,4 @@
 </script>
 </body>
 
-</html>
+
