--- a/Module 4/Tiệm cầm đồ Tiên Thanh/tiem_cam_do_tien_thanh/src/main/webapp/views/Android_Phone/listAndroid_Phone.html
+++ b/Module 4/Tiệm cầm đồ Tiên Thanh/tiem_cam_do_tien_thanh/src/main/webapp/views/Android_Phone/listAndroid_Phone.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="start_date_android_phone" class="col-form-label">Ngày cầm:</label>
-                        <input type="text" class="form-control" id="start_date_android_phone"
+                        <input type="date" class="form-control" id="start_date_android_phone"
                                onblur="startDateError()" th:field="*{start_Date}">
                         <span class="input-error" id="check_if_start_date_null">Vui lòng nhập ngày cầm</span>
                     </div>
