--- a/apache-tomcat-9.0.73-windows-x64/apache-tomcat-9.0.73/webapps/ROOT/views/Android_Phone/listAndroid_Phone.html
+++ b/apache-tomcat-9.0.73-windows-x64/apache-tomcat-9.0.73/webapps/ROOT/views/Android_Phone/listAndroid_Phone.html
@@ -132,7 +132,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form th:object="${android_phoneJDBC}" th:action="@{/tienthanh/save_create_android_phone}" method="post">
+                <form th:object="${android_phone}" th:action="@{/tienthanh/save_create_android_phone}" method="post">
                     <div class="mb-3">
                         <label for="id_android_phone" class="col-form-label">Mã số:</label>
                         <input type="number" class="form-control" id="id_android_phone" onblur="idError()" oninput="removeLeadingZeros(this)" th:field="*{id}">
